AC_INIT(NOTES)

VERSION=0.0.1

#------------------------------------------------------------------------
# Handle the --prefix=... option
#------------------------------------------------------------------------

if test "${prefix}" = "NONE"; then
    prefix=/usr/local
fi
if test "${exec_prefix}" = "NONE"; then
    exec_prefix=$prefix
fi

# RR_SRC_DIR=`cd $srcdir/..; pwd`
RR_SRC_DIR=`pwd`
AC_SUBST(RR_SRC_DIR)

dnl find and test the C compiler
AC_PROG_CC
AC_LANG_C

# AC_PROG_INSTALL
AC_PROG_MAKE_SET

AC_HEADER_STDC
AC_CHECK_FUNC(atol,,AC_MSG_ERROR(oops! no atol ?!?))

AC_SUBST(VERSION)

AC_ARG_ENABLE(64bit,       [  --enable-64bit              Enable 64bit support (where applicable)])
X86_64=
if test "x$enable_64bit" != "x" ; then
    echo Enabling 64-bit support
    X86_64="--enable-64bit"
fi

AC_ARG_WITH([blt],[AS_HELP_STRING([--with-blt[=DIR]], [use installed version of blt2.4z @<:@default=yes@:>@])],[],[with_blt=yes])
BUILD_BLT=$with_blt
AC_SUBST(BUILD_BLT)

AC_ARG_WITH([expat],[AS_HELP_STRING([--with-expat[=DIR]], [use installed version of expat @<:@default=yes@:>@])],[],[with_expat=yes])
BUILD_EXPAT=$with_expat
AC_SUBST(BUILD_EXPAT)

AC_ARG_WITH([htmlwidget],[AS_HELP_STRING([--with-htmlwidget[=DIR]], [use installed version of htmlwidget @<:@default=yes@:>@])],[],[with_htmlwidget=yes])
BUILD_HTMLWIDGET=$with_htmlwidget
AC_SUBST(BUILD_HTMLWIDGET)

AC_ARG_WITH([itcl],[AS_HELP_STRING([--with-itcl[=DIR]], [use installed version of itcl @<:@default=yes@:>@])],[],[with_itcl=yes])
BUILD_ITCL=$with_itcl
AC_SUBST(BUILD_ITCL)

AC_ARG_WITH([b64],[AS_HELP_STRING([--with-b64[=DIR]], [use installed version of b64 @<:@default=yes@:>@])],[],[with_b64=yes])
BUILD_LIBB64=$with_b64
AC_SUBST(BUILD_LIBB64)

AC_ARG_WITH([pymol],[AS_HELP_STRING([--with-pymol[=DIR]], [use installed version of pymol @<:@default=no@:>@])],[],[with_pymol=no])
BUILD_PYMOL=$with_pymol
AC_SUBST(BUILD_PYMOL)

AC_ARG_WITH([scew],[AS_HELP_STRING([--with-scew[=DIR]], [use installed version of scew @<:@default=yes@:>@])],[],[with_scew=yes])
BUILD_SCEW=$with_scew
AC_SUBST(BUILD_SCEW)

AC_ARG_WITH([shape],[AS_HELP_STRING([--with-shape[=DIR]], [use installed version of shape @<:@default=yes@:>@])],[],[with_shape=yes])
BUILD_SHAPE=$with_shape
AC_SUBST(BUILD_SHAPE)

AC_ARG_WITH([tDOM],[AS_HELP_STRING([--with-tDOM[=DIR]], [use installed version of tDOM @<:@default=yes@:>@])],[],[with_tDOM=yes])
BUILD_TDOM=$with_tDOM
AC_SUBST(BUILD_TDOM)

AC_ARG_WITH([tcl],[AS_HELP_STRING([--with-tcl[=DIR]], [use installed version of tcl @<:@default=yes@:>@])],[],[with_tcl=yes])
BUILD_TCL=$with_tcl
AC_SUBST(BUILD_TCL)

AC_ARG_WITH([tcllib],[AS_HELP_STRING([--with-tcllib[=DIR]], [use installed version of tcllib @<:@default=yes@:>@])],[],[with_tcllib=yes])
BUILD_TCLLIB=$with_tcllib
AC_SUBST(BUILD_TCLLIB)

AC_ARG_WITH([tk],[AS_HELP_STRING([--with-tk[=DIR]], [use installed version of tk @<:@default=yes@:>@])],[],[with_tk=yes])
BUILD_TK=$with_tk
AC_SUBST(BUILD_TK)

AC_ARG_WITH([tkimg],[AS_HELP_STRING([--with-tkimg[=DIR]], [use installed version of tkimg @<:@default=yes@:>@])],[],[with_tkimg=yes])
BUILD_TKIMG=$with_tkimg
AC_SUBST(BUILD_TKIMG)

AC_ARG_WITH([tls],[AS_HELP_STRING([--with-tls[=DIR]], [use installed version of tls @<:@default=yes@:>@])],[],[with_tls=yes])
BUILD_TLS=$with_tls
AC_SUBST(BUILD_TLS)

AC_ARG_WITH([vtk],[AS_HELP_STRING([--with-vtk[=DIR]], [use installed version of vtk @<:@default=yes@:>@])],[],[with_vtk=yes])
BUILD_VTK=$with_vtk
AC_SUBST(BUILD_VTK)

AC_ARG_WITH([zlib],[AS_HELP_STRING([--with-zlib[=DIR]], [use installed version of zlib @<:@default=yes@:>@])],[],[with_zlib=yes])
BUILD_ZLIB=$with_zlib
AC_SUBST(BUILD_ZLIB)

AC_ARG_WITH([voronoi],[AS_HELP_STRING([--with-voronoi[=DIR]], [use installed version of voronoi @<:@default=yes@:>@])],[],[with_voronoi=yes])
BUILD_VORONOI=$with_voronoi
AC_SUBST(BUILD_VORONOI)

AC_ARG_WITH(matlab,      [  --with-matlab[=DIR]         Build Matlab bindings if MEX compiler is found])
AC_ARG_WITH(matlab_arch, [  --with-matlab-arch[=ARCH]   Build Matlab bindings for ARCH architecture])
MEX=
MEX_ARCH=
MATLAB_HOME="--without-matlab"
if test "$with_matlab" != "no" ; then
    dnl WITH_MATLAB = "yes"
    if test -x "$with_matlab/bin/mex"
    then
        echo Found matlab in $with_matlab/bin/mex
        MEX="$with_matlab/bin/mex"
        MATLAB_HOME="$with_matlab"
    else
        if test -x "$with_matlab"
        then
            echo Found mex in $with_matlab
            MEX="$with_matlab"
            MATLAB_HOME="$with_matlab"
        else
            AC_PATH_PROG(MEX, mex)
            AC_PATH_PROG(MATLAB_HOME, mex)
        fi
    fi
fi
if test "x$with_matlab_arch" != "x" ; then
    MEX_ARCH="--with-matlab-arch=$with_matlab_arch"
fi
dnl AM_CONDITIONAL(WITH_MATLAB, test x$MEX != x)

AC_SUBST(X86_64)
AC_SUBST(MEX)
AC_SUBST(MEX_ARCH)
AC_SUBST(MATLAB_HOME)

dnl read Makefile.in and write Makefile
AC_OUTPUT(Makefile)
