AC_INIT([pymol], [r3970])
AC_CONFIG_SRCDIR([configure.in])
AC_CONFIG_AUX_DIR(cf)
AC_PREFIX

#------------------------------------------------------------------------
# Handle the --prefix=... option
#------------------------------------------------------------------------

if test "${prefix}" = "NONE"; then
    prefix=/usr/local
fi
if test "${exec_prefix}" = "NONE"; then
    exec_prefix=$prefix
fi
libdir=$exec_prefix/lib
includedir=$prefix/include

AC_PROG_INSTALL
AC_PROG_RANLIB
AC_PROG_LN_S
AC_PROG_MKDIR_P

RP_LANG_PYTHON
AC_SUBST(PYTHON)
AC_SUBST(PYTHON_CFLAGS)
AC_SUBST(PYTHON_DISTUTILS)
AC_SUBST(PYTHON_INCDIR)
AC_SUBST(PYTHON_INCLUDES)
AC_SUBST(PYTHON_LDFLAGS)
AC_SUBST(PYTHON_LIB)
AC_SUBST(PYTHON_LIBDIR)
AC_SUBST(PYTHON_SITE_DIR)
AC_SUBST(PYTHON_SITE_PACKAGES)
AC_SUBST(PYTHON_VERSION)

PYMOL_VERSION=3970
pymol_dir=pymol-exported-r${PYMOL_VERSION}
pymol_server_patch=${srcdir}/pymol-exported-r${PYMOL_VERSION}.patch
PYMOL_DIR=${pymol_dir}

if test -f "${pymol_server_patch}" ; then
  # Copy pymol from the srcdir and patch it with our server patch.
  rm -rf ${pymol_dir}
  tar -C $srcdir -clf - ${pymol_dir} | tar -xpf - 
  # Apply patches to original sources.
  (cd ${pymol_dir}; patch -p0) < ${pymol_server_patch}
  (cd ${pymol_dir}; ./configure --prefix=${prefix} --exec_prefix=$exec_prefix --enable-shared)
else
  AC_ERROR([can't find server patch file ${pymol_server_patch}])
fi
AC_SUBST(PYMOL_DIR)
AC_SUBST(PYMOL_VERSION)
AC_OUTPUT([Makefile pymol])
